// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx8xsnx {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx8xsnx:focus,
.sx8xsnx:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx8xsnx:active,
.sx8xsnx:visited {
  color: var(--colors-primary500);
}

.sx8xsnx5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

<div>
  <a
    class="sx8xsnx sx8xsnx5dbgn--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx8xsnx {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sx8xsnx:focus,
.sx8xsnx:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sx8xsnx:active,
.sx8xsnx:visited {
  color: var(--colors-primary500);
}

.sx8xsnx5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sx8xsnxn3mo2--size-lg {
  font-size: var(--fontSizes-lg);
  line-height: 1.52;
}

<div>
  <a
    class="sx8xsnx sx8xsnxn3mo2--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
